Add basic setup

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/styles/styles.css">
+  
+  <!-- BOXICONS -->
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
+  <title>Ruby Zhuang</title>
 </head>
 <body>
   <h1>Hello World!</h1>
+
+  <!-- SCROLL REVEAL -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <!-- MAIN JAVASCRIPT -->
+  <script src="assets/scripts/main.js"></script>
 </body>
 </html>
