Add CSS variables

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Ruby Zhuang</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>Testing!</h1>
 
   <!-- SCROLL REVEAL -->
   <script src="https://unpkg.com/scrollreveal"></script>
