Basic nav menu for small screens

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
   <!-- HEADER -->
   <header class="l-header">
+    <!-- Navbar -->
     <nav class="nav bd-grid">
       <div>
         <a href="#" class="nav__logo">Ruby Zhuang</a>
