--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
     </nav>
   </header>
 
+  <main class="l-main">
+    <!-- HOME -->
+    <section class="home" id="home">
+      <div class="home__container bd-grid">
+        <h1 class="home__title"><span>HELLO!</span></h1>
+        
+        <div class="home__scroll">
+          <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll Down</a>
+        </div>
+
+        <img src="assets/images/Ruby.png" alt="profile-img" class="home__img">
+      </div>
+    </section>
+
+  </main>
   <!-- SCROLL REVEAL -->
   <script src="https://unpkg.com/scrollreveal"></script>
 
