--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- CSS -->
   <link rel="stylesheet" href="assets/styles/styles.css">
   
-  <!-- BOXICONS -->
-  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <!-- FONT AWESOME -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
   <title>Ruby Zhuang</title>
 </head>
@@ -33,7 +33,7 @@
       </div>
 
       <div class="nav__toggle" id="nav-toggle">
-        <i class='bx bx-menu'></i>
+        <i class="fas fa-bars"></i>
       </div>
     </nav>
   </header>
@@ -45,10 +45,28 @@
         <h1 class="home__title"><span>HELLO!</span></h1>
         
         <div class="home__scroll">
-          <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll Down</a>
+          <a href="#about" class="home__scroll-link"><i class="fas fa-angle-double-up"></i> Scroll Down</a>
         </div>
 
         <img src="assets/images/Ruby.png" alt="profile-img" class="home__img">
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section class="about section" id="about">
+      <h2 class="section-title">About</h2>
+
+      <div class="about__container bd-grid">
+        <div class="about__img">
+          <img src="assets/images/Ruby.png" alt="profile-img">
+        </div>
+
+        <div class="about__social">
+          <a href="#" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="about__social-icon"><i class="fab fa-github"></i></a>
+          <a href="#" class="about__social-icon"><i class="fas fa-at"></i></a>
+          <a href="#" class="about__social-icon"><i class="fas fa-file-download"></i></a>
+        </div>
       </div>
     </section>
 
