Finish basic ABOUT section

--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
           <img src="assets/images/Ruby.png" alt="profile-img">
         </div>
 
-        <div class="about__social">
-          <a href="#" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="about__social-icon"><i class="fab fa-github"></i></a>
-          <a href="#" class="about__social-icon"><i class="fas fa-at"></i></a>
-          <a href="#" class="about__social-icon"><i class="fas fa-file-download"></i></a>
+        <div>
+          <h2 class="about__subtitle">I'm Ruby Zhuang</h2>
+          <span class="about_professi">A programmer</span>
+          <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
+          
+          <div class="about__social">
+            <a href="#" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="about__social-icon"><i class="fab fa-github"></i></a>
+            <a href="#" class="about__social-icon"><i class="fas fa-at"></i></a>
+            <a href="#" class="about__social-icon"><i class="fas fa-file-download"></i></a>
+          </div>
         </div>
       </div>
     </section>
