--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div>
           <h2 class="about__subtitle">I'm Ruby Zhuang</h2>
-          <span class="about_professi">A programmer</span>
+          <span class="about__profession">Web Developer</span>
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
           
           <div class="about__social">
