Add list of skills

--- a/index.html
+++ b/index.html
@@ -76,6 +76,51 @@
       </div>
     </section>
 
+    <!-- SKILLS -->
+    <section class="skills section" id="skills">
+      <h2 class="section-title">Skills</h2>
+
+      <div class="skills_container bg-grid">
+        <div class="skills__box">
+          <!-- Languages -->
+          <h3 class="skills_subtitle">Languages</h3>
+          <span class="skills_name">HTML</span>
+          <span class="skills_name">CSS</span>
+          <span class="skills_name">Javascript</span>
+          <span class="skills_name">Ruby</span>
+          <span class="skills_name">Visual Basic</span>
+          <span class="skills_name">Matlab</span>
+
+          <!-- Frameworks & Libraries -->
+          <h3 class="skills_subtitle">Frameworks & Libraries</h3>
+          <span class="skills_name">Node.js</span>
+          <span class="skills_name">Express</span>
+          <span class="skills_name">React</span>
+          <span class="skills_name">jQuery</span>
+          <span class="skills_name">EJS</span>
+          <span class="skills_name">Rails</span>
+          <span class="skills_name">Bootstrap</span>
+          <span class="skills_name">Material UI</span>
+          <span class="skills_name">SASS</span>
+          <span class="skills_name">Socket IO</span>
+
+          <!-- Systems & Databases -->
+          <h3 class="skills_subtitle">Systems, Databases & Tools</h3>
+          <span class="skills_name">PostgreSQL</span>
+          <span class="skills_name">MySQL</span>
+          <span class="skills_name">Git</span>
+
+          <!-- Testing -->
+          <h3 class="skills_subtitle">Testing</h3>
+          <span class="skills_name">Mocha</span>
+          <span class="skills_name">Chai</span>
+          <span class="skills_name">Storybook</span>
+          <span class="skills_name">Jest</span>
+          <span class="skills_name">Cypress</span>
+
+        </div>
+      </div>
+    </section>
   </main>
   <!-- SCROLL REVEAL -->
   <script src="https://unpkg.com/scrollreveal"></script>
