Finish Skills section

--- a/index.html
+++ b/index.html
@@ -80,43 +80,43 @@
     <section class="skills section" id="skills">
       <h2 class="section-title">Skills</h2>
 
-      <div class="skills_container bg-grid">
+      <div class="skills_container bd-grid">
         <div class="skills__box">
           <!-- Languages -->
           <h3 class="skills_subtitle">Languages</h3>
-          <span class="skills_name">HTML</span>
-          <span class="skills_name">CSS</span>
-          <span class="skills_name">Javascript</span>
-          <span class="skills_name">Ruby</span>
-          <span class="skills_name">Visual Basic</span>
-          <span class="skills_name">Matlab</span>
+          <span class="skills__name">HTML</span>
+          <span class="skills__name">CSS</span>
+          <span class="skills__name">Javascript</span>
+          <span class="skills__name">Ruby</span>
+          <span class="skills__name">Visual Basic</span>
+          <span class="skills__name">Matlab</span>
 
           <!-- Frameworks & Libraries -->
           <h3 class="skills_subtitle">Frameworks & Libraries</h3>
-          <span class="skills_name">Node.js</span>
-          <span class="skills_name">Express</span>
-          <span class="skills_name">React</span>
-          <span class="skills_name">jQuery</span>
-          <span class="skills_name">EJS</span>
-          <span class="skills_name">Rails</span>
-          <span class="skills_name">Bootstrap</span>
-          <span class="skills_name">Material UI</span>
-          <span class="skills_name">SASS</span>
-          <span class="skills_name">Socket IO</span>
+          <span class="skills__name">Node.js</span>
+          <span class="skills__name">Express</span>
+          <span class="skills__name">React</span>
+          <span class="skills__name">jQuery</span>
+          <span class="skills__name">EJS</span>
+          <span class="skills__name">Rails</span>
+          <span class="skills__name">Bootstrap</span>
+          <span class="skills__name">Material UI</span>
+          <span class="skills__name">SASS</span>
+          <span class="skills__name">Socket IO</span>
 
           <!-- Systems & Databases -->
           <h3 class="skills_subtitle">Systems, Databases & Tools</h3>
-          <span class="skills_name">PostgreSQL</span>
-          <span class="skills_name">MySQL</span>
-          <span class="skills_name">Git</span>
+          <span class="skills__name">PostgreSQL</span>
+          <span class="skills__name">MySQL</span>
+          <span class="skills__name">Git</span>
 
           <!-- Testing -->
           <h3 class="skills_subtitle">Testing</h3>
-          <span class="skills_name">Mocha</span>
-          <span class="skills_name">Chai</span>
-          <span class="skills_name">Storybook</span>
-          <span class="skills_name">Jest</span>
-          <span class="skills_name">Cypress</span>
+          <span class="skills__name">Mocha</span>
+          <span class="skills__name">Chai</span>
+          <span class="skills__name">Storybook</span>
+          <span class="skills__name">Jest</span>
+          <span class="skills__name">Cypress</span>
 
         </div>
       </div>
