Adjust comments on index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <title>Ruby Zhuang</title>
 </head>
 <body>
-  <!-- HEADER -->
+  <!--------------- NAVBAR --------------->
   <header class="l-header">
-    <!-- Navbar -->
     <nav class="nav bd-grid">
       <div>
         <a href="#" class="nav__logo">Ruby Zhuang</a>
@@ -39,7 +38,7 @@
   </header>
 
   <main class="l-main">
-    <!-- HOME -->
+    <!--------------- HOME --------------->
     <section class="home" id="home">
       <div class="home__container bd-grid">
         <h1 class="home__title"><span>HELLO!</span></h1>
@@ -52,7 +51,7 @@
       </div>
     </section>
 
-    <!-- ABOUT -->
+    <!--------------- ABOUT --------------->
     <section class="about section" id="about">
       <h2 class="section-title">About</h2>
 
@@ -76,7 +75,7 @@
       </div>
     </section>
 
-    <!-- SKILLS -->
+    <!--------------- SKILLS --------------->
     <section class="skills section" id="skills">
       <h2 class="section-title">Skills</h2>
 
@@ -121,6 +120,9 @@
         </div>
       </div>
     </section>
+    
+    <!--------------- PROJECT --------------->
+
   </main>
   <!-- SCROLL REVEAL -->
   <script src="https://unpkg.com/scrollreveal"></script>
