--- a/index.html
+++ b/index.html
@@ -120,8 +120,90 @@
         </div>
       </div>
     </section>
-    
+
     <!--------------- PROJECT --------------->
+    <section class="projects section" id="projects">
+      <h2 class="section-title">Projects</h2>
+
+      <div class="projects__container bd-grid">
+        <!-- Project 1 -->
+        <div class="project__img">
+          <img src="assets/images/work1.jpg" alt="">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="#" class="project__link-name">
+              <h2>Project 1</h2>
+              View Details
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="project__img">
+          <img src="assets/images/work2.jpg" alt="">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="#" class="project__link-name">
+              <h2>Project 2</h2>
+              View Details
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="project__img">
+          <img src="assets/images/work3.jpg" alt="">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="#" class="project__link-name">
+              <h2>Project 3</h2>
+              View Details
+            </a>
+          </div>
+        </div>
+        <!-- Project 4 -->
+        <div class="project__img">
+          <img src="assets/images/work4.jpg" alt="">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="#" class="project__link-name">
+              <h2>Project 4</h2>
+              View Details
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 5 -->
+        <div class="project__img">
+          <img src="assets/images/work5.jpg" alt="">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="#" class="project__link-name">
+              <h2>Project 5</h2>
+              View Details
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="project__img">
+          <img src="assets/images/work6.jpg" alt="">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="#" class="project__link-name">
+              <h2>Project 6</h2>
+              View Details
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
   <!-- SCROLL REVEAL -->
