Add project images

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       <div class="projects__container bd-grid">
         <!-- Project 1 -->
         <div class="project__img">
-          <img src="assets/images/work1.jpg" alt="">
+          <img src="assets/images/project-drop-the-beat.png" alt="drop-the-beat-image">
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
             <a href="#" class="project__link-name">
-              <h2>Project 1</h2>
-              View Details
+              <h2>DROP THE BEAT</h2>
+              <p>Online Music Game</p>
             </a>
           </div>
         </div>
@@ -147,7 +147,7 @@
           <div class="project__link">
             <a href="#" class="project__link-name">
               <h2>Project 2</h2>
-              View Details
+              <p>View Details</p>
             </a>
           </div>
         </div>
@@ -160,7 +160,7 @@
           <div class="project__link">
             <a href="#" class="project__link-name">
               <h2>Project 3</h2>
-              View Details
+              <p>View Details</p>
             </a>
           </div>
         </div>
@@ -172,7 +172,7 @@
           <div class="project__link">
             <a href="#" class="project__link-name">
               <h2>Project 4</h2>
-              View Details
+              <p>View Details</p>
             </a>
           </div>
         </div>
@@ -185,7 +185,7 @@
           <div class="project__link">
             <a href="#" class="project__link-name">
               <h2>Project 5</h2>
-              View Details
+              <p>View Details</p>
             </a>
           </div>
         </div>
@@ -198,7 +198,7 @@
           <div class="project__link">
             <a href="#" class="project__link-name">
               <h2>Project 6</h2>
-              View Details
+              <p>View Details</p>
             </a>
           </div>
         </div>
