Add projects with title, brief info and link

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <header class="l-header">
     <nav class="nav bd-grid">
       <div>
-        <a href="#" class="nav__logo">Ruby Zhuang</a>
+        <a href="#" class="nav__logo">RUBY ZHUANG</a>
       </div>
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link active" >Home</a></li>
-          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-          <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="#home" class="nav__link active" >HOME</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">SKILLS</a></li>
+          <li class="nav__item"><a href="#projects" class="nav__link">PROJECTS</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>
         </ul>
       </div>
 
@@ -53,7 +53,7 @@
 
     <!--------------- ABOUT --------------->
     <section class="about section" id="about">
-      <h2 class="section-title">About</h2>
+      <h2 class="section-title">ABOUT</h2>
 
       <div class="about__container bd-grid">
         <div class="about__img">
@@ -61,7 +61,7 @@
         </div>
 
         <div>
-          <h2 class="about__subtitle">I'm Ruby Zhuang</h2>
+          <h2 class="about__subtitle">I'M RUBY</h2>
           <span class="about__profession">Web Developer</span>
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
           
@@ -77,7 +77,7 @@
 
     <!--------------- SKILLS --------------->
     <section class="skills section" id="skills">
-      <h2 class="section-title">Skills</h2>
+      <h2 class="section-title">SKILLS</h2>
 
       <div class="skills_container bd-grid">
         <div class="skills__box">
@@ -123,82 +123,83 @@
 
     <!--------------- PROJECT --------------->
     <section class="projects section" id="projects">
-      <h2 class="section-title">Projects</h2>
+      <h2 class="section-title">PROJECTS</h2>
 
       <div class="projects__container bd-grid">
-        <!-- Project 1 -->
+        <!-- Drop the Beat -->
         <div class="project__img">
           <img src="assets/images/project-drop-the-beat.png" alt="drop-the-beat-image">
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="#" class="project__link-name">
-              <h2>DROP THE BEAT</h2>
-              <p>Online Music Game</p>
+            <a href="https://github.com/Ruby-Zhuang/DROP-THE-BEAT" class="project__link-name">
+              <h2>Drop the Beat</h2>
+              <p>'Name That Tune' Game</p>
             </a>
           </div>
         </div>
 
-        <!-- Project 2 -->
+        <!-- Bubbles Delight -->
         <div class="project__img">
-          <img src="assets/images/work2.jpg" alt="">
+          <img src="assets/images/project-bubbles-delight.png" alt="bubbles-delight-image">
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="#" class="project__link-name">
-              <h2>Project 2</h2>
-              <p>View Details</p>
+            <a href="https://github.com/Ruby-Zhuang/Bubbles-Delight" class="project__link-name">
+              <h2>Bubbles Delight</h2>
+              <p>Bubbletea Ordering Experience</p>
             </a>
           </div>
         </div>
 
-        <!-- Project 3 -->
+        <!-- Scheduler -->
         <div class="project__img">
-          <img src="assets/images/work3.jpg" alt="">
+          <img src="assets/images/project-scheduler.png" alt="scheduler-image">
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="#" class="project__link-name">
-              <h2>Project 3</h2>
-              <p>View Details</p>
-            </a>
-          </div>
-        </div>
-        <!-- Project 4 -->
-        <div class="project__img">
-          <img src="assets/images/work4.jpg" alt="">
-
-          <!-- Reveal Link on Hover -->
-          <div class="project__link">
-            <a href="#" class="project__link-name">
-              <h2>Project 4</h2>
-              <p>View Details</p>
+            <a href="https://github.com/Ruby-Zhuang/scheduler" class="project__link-name">
+              <h2>Scheduler</h2>
+              <p>Manage Interviews</p>
             </a>
           </div>
         </div>
 
-        <!-- Project 5 -->
+        <!-- Tweeter -->
         <div class="project__img">
-          <img src="assets/images/work5.jpg" alt="">
+          <img src="assets/images/project-tweeter.png" alt="tweeter-image">
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="#" class="project__link-name">
-              <h2>Project 5</h2>
-              <p>View Details</p>
+            <a href="https://github.com/Ruby-Zhuang/tweeter" class="project__link-name">
+              <h2>Tweeter</h2>
+              <p>Twitter Clone</p>
             </a>
           </div>
         </div>
 
-        <!-- Project 6 -->
+        <!-- TinyApp -->
         <div class="project__img">
-          <img src="assets/images/work6.jpg" alt="">
+          <img src="assets/images/project-tiny-app.png" alt="tiny-app-image">
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="#" class="project__link-name">
-              <h2>Project 6</h2>
-              <p>View Details</p>
+            <a href="https://github.com/Ruby-Zhuang/tinyapp" class="project__link-name">
+              <h2>TinyApp</h2>
+              <p>URL Shortener</p>
+            </a>
+          </div>
+        </div>
+
+        <!-- Jungle -->
+        <div class="project__img">
+          <img src="assets/images/project-jungle-rails.png" alt="jungle-image">
+
+          <!-- Reveal Link on Hover -->
+          <div class="project__link">
+            <a href="https://github.com/Ruby-Zhuang/jungle-rails" class="project__link-name">
+              <h2>Jungle</h2>
+              <p>E-Commerce Store</p>
             </a>
           </div>
         </div>
