HTML for Contact section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <!--------------- PROJECT --------------->
+    <!--------------- PROJECTS --------------->
     <section class="projects section" id="projects">
       <h2 class="section-title">PROJECTS</h2>
 
@@ -203,6 +203,34 @@
             </a>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!--------------- CONTACT --------------->
+    <section class="contact section" id="contact">
+      <h2 class="section-title">CONTACT</h2>
+
+      <div class="contact__container bd-grid">     
+        <!-- Contact Info -->
+        <div class="contact__info">
+          <h3 class="contact__subtitle">E-MAIL</h3>
+          <span class="contact__text">ruby.zhuang@hotmail.com</span>
+
+          <h3 class="contact__subtitle">PHONE</h3>
+          <span class="contact__text">(647)-528-7829</span>
+        </div>
+
+        <!-- Input Form -->
+        <form action="" class="contact__form">
+          <div class="contact__inputs">
+            <input type="text" placeholder="Name" class="contact__input">
+            <input type="mail" placeholder="E-mail" class="contact__input">
+          </div>
+          
+          <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+          
+          <input type="submit" value="Send" class="contact__button">
+        </form>
       </div>
     </section>
 
