RComment out contact form

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
 
         <!-- Input Form -->
-        <form action="" class="contact__form">
+        <!-- <form action="" class="contact__form">
           <div class="contact__inputs">
             <input type="text" placeholder="Name" class="contact__input">
             <input type="mail" placeholder="E-mail" class="contact__input">
@@ -230,7 +230,7 @@
           <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
           
           <input type="submit" value="Send" class="contact__button">
-        </form>
+        </form> -->
       </div>
     </section>
 
