--- a/index.html
+++ b/index.html
@@ -233,8 +233,24 @@
         </form> -->
       </div>
     </section>
-
   </main>
+
+  <!-- FOOTER -->
+  <footer class="footer section">
+    <div class="footer__container bd-grid">
+      <div class="footer__data">
+        <h2 class="footer__title">© 2021 RUBY ZHUANG</h2>
+        <p class="footer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+
+      <div class="footer__data">
+        <a href="#" class="footer__social"><i class="fab fa-linkedin"></i></a>
+        <a href="#" class="footer__social"><i class="fab fa-github"></i></a>
+        <a href="#" class="footer__social"><i class="fas fa-at"></i></a>
+      </div>
+    </div>
+  </footer>
+
   <!-- SCROLL REVEAL -->
   <script src="https://unpkg.com/scrollreveal"></script>
 
