--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="project__link">
             <a href="https://github.com/Ruby-Zhuang/scheduler" class="project__link-name">
               <h2>Scheduler</h2>
-              <p>Manage Interviews</p>
+              <p>Interview Manager</p>
             </a>
           </div>
         </div>
