--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <header class="l-header">
     <nav class="nav bd-grid">
       <div>
-        <a href="#" class="nav__logo">RUBY ZHUANG</a>
+        <a href="" class="nav__logo">RUBY ZHUANG</a>
       </div>
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link active" >HOME</a></li>
+          <!-- <li class="nav__item"><a href="#home" class="nav__link active" >HOME</a></li> -->
           <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
           <li class="nav__item"><a href="#skills" class="nav__link">SKILLS</a></li>
           <li class="nav__item"><a href="#projects" class="nav__link">PROJECTS</a></li>
@@ -39,7 +39,7 @@
 
   <main class="l-main">
     <!--------------- HOME --------------->
-    <section class="home" id="home">
+    <section class="home">
       <div class="home__container bd-grid">
         <h1 class="home__title"><span>HELLO!</span></h1>
         
@@ -238,10 +238,7 @@
   <!-- FOOTER -->
   <footer class="footer section">
     <div class="footer__container bd-grid">
-      <div class="footer__data">
         <h2 class="footer__title">© 2021 RUBY ZHUANG</h2>
-        <p class="footer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
 
       <div class="footer__data">
         <a href="#" class="footer__social"><i class="fab fa-linkedin"></i></a>
