Adjust colour palette

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div>
-          <h2 class="about__subtitle">I'M RUBY</h2>
+          <h2 class="about__subtitle">I'm RUBY 👋</h2>
           <span class="about__profession">Web Developer</span>
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
           
