Add links to LinkedIn, Github and Resume

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
           
           <div class="about__social">
-            <a href="#" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="about__social-icon"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
+            <a target="_blank" href="https://github.com/Ruby-Zhuang" class="about__social-icon"><i class="fab fa-github"></i></a>
             <a href="#" class="about__social-icon"><i class="fas fa-at"></i></a>
-            <a href="#" class="about__social-icon"><i class="fas fa-file-download"></i></a>
+            <a target="_blank" href="./assets/docs/Ruby-Zhuang-Resume.pdf" class="about__social-icon" download><i class="fas fa-file-download"></i></a>
           </div>
         </div>
       </div>
@@ -229,8 +229,8 @@
         <h2 class="footer__title">© 2021 RUBY ZHUANG</h2>
 
       <div class="footer__data">
-        <a href="#" class="footer__social"><i class="fab fa-linkedin"></i></a>
-        <a href="#" class="footer__social"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="footer__social"><i class="fab fa-linkedin"></i></a>
+        <a target="_blank" href="https://github.com/Ruby-Zhuang" class="footer__social"><i class="fab fa-github"></i></a>
         <a href="#" class="footer__social"><i class="fas fa-at"></i></a>
       </div>
     </div>
