--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- FAVICON -->
+  <link rel="icon" href="./assets/docs/favicon.png">
+
   <!-- CSS -->
   <link rel="stylesheet" href="assets/styles/styles.css">
   
