Add logo to navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   <header class="l-header">
     <nav class="nav bd-grid">
       <div>
-        <a href="" class="nav__logo">RUBY ZHUANG</a>
+        <a href="" class="nav__logo">
+          <img src="./assets/docs/logo.png" alt="ruby-logo">
+          <h2>RUBY ZHUANG</h2>
+        </a>
       </div>
 
       <div class="nav__menu" id="nav-menu">
