Adjust name on navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div>
         <a href="" class="nav__logo">
           <img src="./assets/docs/logo.png" alt="ruby-logo">
-          <h2>RUBY ZHUANG</h2>
+          <h3 class="nav__name">RUBY ZHUANG</h3>
         </a>
       </div>
 
@@ -68,7 +68,7 @@
 
         <div>
           <h2 class="about__subtitle">I'm RUBY 👋</h2>
-          <span class="about__profession">Web Developer</span>
+          <span class="about__profession">Software Developer</span>
           <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
           
           <div class="about__social">
