--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
           <li class="nav__item"><a href="#skills" class="nav__link">SKILLS</a></li>
           <li class="nav__item"><a href="#projects" class="nav__link">PROJECTS</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>
+          <li class="nav__item">
+            <a target="_blank" class="nav__link" href="./assets/docs/Ruby-Zhuang-Resume.pdf" download>
+              <div class="resume">
+                <i class="fas fa-file-download"></i> RESUME
+              </div>
+            </a>
+          </li>
+
         </ul>
       </div>
 
