Update About bio and skills image

--- a/index.html
+++ b/index.html
@@ -77,12 +77,24 @@
         <div>
           <h2 class="about__subtitle">I'm RUBY 👋</h2>
           <span class="about__profession">Software Developer</span>
-          <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium atque corrupti fugiat. Beatae dolores sit, quis repellat accusamus quae a sequi repellendus, impedit magnam dolore dolorum autem quas quidem quod.</p>
+          <p class="about__text">
+            As a problem solver by nature, I've loved programming ever since my first encounter with it in grade 10.
+            Over the years, the interest and passion only grew bigger and bigger until I made this dream a reality. 
+            Web development is challenging yet rewarding, and I love the innovation and creativity this field has to offer - its potential never ceases to amaze me!
+            I’m passionate about purposeful design and making the world a better place through readable, clean and testable code.
+            As well, I'm an avid believer in continuous growth - it's never too late to learn something new!
+
+          </p>
+
+          <p class="about__text">
+            When away from the computer, you can find me enjoying bubbletea and looking for delicious food.
+            If you love coding (or bubbletea) as much as I do, let's chat!
+          </p>
           
           <div class="about__social">
             <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/Ruby-Zhuang" class="about__social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="about__social-icon"><i class="fas fa-at"></i></a>
+            <a target="_blank" href="mailto:ruby.zhuang@hotmail.com" class="about__social-icon"><i class="fas fa-at"></i></a>
             <a target="_blank" href="./assets/docs/Ruby-Zhuang-Resume.pdf" class="about__social-icon" download><i class="fas fa-file-download"></i></a>
           </div>
         </div>
@@ -93,7 +105,7 @@
     <section class="skills section" id="skills">
       <h2 class="section-title">SKILLS</h2>
 
-      <div class="skills_container bd-grid">
+      <div class="skills__container bd-grid">
         <div class="skills__box">
           <!-- Languages -->
           <h3 class="skills_subtitle">Languages</h3>
@@ -130,7 +142,10 @@
           <span class="skills__name">Storybook</span>
           <span class="skills__name">Jest</span>
           <span class="skills__name">Cypress</span>
+        </div>
 
+        <div class="skills__img">
+          <img src="assets/images/skills.png" alt="skills-img">
         </div>
       </div>
     </section>
