Change mail icon and contact section styles

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="about__social">
             <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="about__social-icon"><i class="fab fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/Ruby-Zhuang" class="about__social-icon"><i class="fab fa-github"></i></a>
-            <a target="_blank" href="mailto:ruby.zhuang@hotmail.com" class="about__social-icon"><i class="fas fa-at"></i></a>
+            <a target="_blank" href="mailto:ruby.zhuang@hotmail.com" class="about__social-icon"><i class="fas fa-envelope"></i></a>
             <a target="_blank" href="./assets/docs/Ruby-Zhuang-Resume.pdf" class="about__social-icon" download><i class="fas fa-file-download"></i></a>
           </div>
         </div>
@@ -238,16 +238,25 @@
     <!--------------- CONTACT --------------->
     <section class="contact section" id="contact">
       <h2 class="section-title">CONTACT</h2>
-
-      <div class="contact__container bd-grid">     
+      
+      <div class="contact__container bd-grid">
+        <div>
+          <h2 class="contact__action">Say Hello! 👋</h2>
+          If you would like to know more about my journey, please feel free to reach out! 
+          I love sharing stories and hearing about new opportunities for growth.
+        </div>
         <!-- Contact Info -->
         <div class="contact__info">
+          <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="footer__social"><i class="fab fa-linkedin"></i></a>
+
           <h3 class="contact__subtitle">E-MAIL</h3>
           <span class="contact__text">ruby.zhuang@hotmail.com</span>
 
           <h3 class="contact__subtitle">PHONE</h3>
           <span class="contact__text">(647)-528-7829</span>
         </div>
+
+
       </div>
     </section>
   </main>
@@ -260,7 +269,7 @@
       <div class="footer__data">
         <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="footer__social"><i class="fab fa-linkedin"></i></a>
         <a target="_blank" href="https://github.com/Ruby-Zhuang" class="footer__social"><i class="fab fa-github"></i></a>
-        <a href="#" class="footer__social"><i class="fas fa-at"></i></a>
+        <a href="#" class="footer__social"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
   </footer>
