Update contact section

--- a/index.html
+++ b/index.html
@@ -246,14 +246,37 @@
           I love sharing stories and hearing about new opportunities for growth.
         </div>
         <!-- Contact Info -->
-        <div class="contact__info">
-          <a target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" class="footer__social"><i class="fab fa-linkedin"></i></a>
+        <div>
+          <a class="contact__info" target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" >
+            <div class="contact__social">
+              <i class="fab fa-linkedin"></i>
+            </div>
+            <div>
+              <h3 class="contact__subtitle">LinkedIn</h3>
+              <span class="contact__text">RubyZhuang</span>
+            </div>
+          </a>
 
-          <h3 class="contact__subtitle">E-MAIL</h3>
-          <span class="contact__text">ruby.zhuang@hotmail.com</span>
+          <a class="contact__info" target="_blank" href="https://github.com/Ruby-Zhuang" >
+            <div class="contact__social">
+              <i class="fab fa-github"></i>
+            </div>
+            <div>
+              <h3 class="contact__subtitle">Github</h3>
+              <span class="contact__text">Ruby-Zhuang</span>
+            </div>
+          </a>
 
-          <h3 class="contact__subtitle">PHONE</h3>
-          <span class="contact__text">(647)-528-7829</span>
+          <a class="contact__info" target="_blank" href="https://github.com/Ruby-Zhuang" >
+            <div class="contact__social">
+              <i class="fas fa-envelope "></i>
+            </div>
+            <div>
+              <h3 class="contact__subtitle">E-Mail</h3>
+              <span class="contact__text">ruby.zhuang@hotmail.com</span>
+            </div>
+          </a>
+
         </div>
 
 
