Add scroll animations to contact section

--- a/index.html
+++ b/index.html
@@ -242,8 +242,10 @@
       <div class="contact__container bd-grid">
         <div>
           <h2 class="contact__action">Say Hello! 👋</h2>
-          If you would like to know more about my journey, please feel free to reach out! 
-          I love sharing stories and hearing about new opportunities for growth.
+          <div class="contact__action-text">
+            If you would like to know more about my journey, please feel free to reach out! 
+            I love sharing stories and hearing about new opportunities for growth.
+          </div>
         </div>
         <!-- Contact Info -->
         <div>
