--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <h2 class="about__subtitle">I'm RUBY 👋</h2>
           <span class="about__profession">Software Developer</span>
           <p class="about__text">
-            As a problem solver by nature, I've loved programming ever since my first encounter with it in grade 10.
-            Over the years, the interest and passion only grew bigger and bigger until I made this dream a reality. 
+            As a problem solver by nature, I've loved programming ever since my first encounter with it in high school.
+            Over the years, the interest and passion only grew bigger and bigger. 
             Web development is challenging yet rewarding, and I love the innovation and creativity this field has to offer - its potential never ceases to amaze me!
             I’m passionate about purposeful design and making the world a better place through readable, clean and testable code.
             As well, I'm an avid believer in continuous growth - it's never too late to learn something new!
@@ -243,10 +243,11 @@
         <div>
           <h2 class="contact__action">Say Hello! 👋</h2>
           <div class="contact__action-text">
-            If you would like to know more about my journey, please feel free to reach out! 
+            If you would like to chat and/or know more about my journey, please feel free to reach out! 
             I love sharing stories and hearing about new opportunities for growth.
           </div>
         </div>
+        
         <!-- Contact Info -->
         <div>
           <a class="contact__info" target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" >
