--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <span class="about__profession">Software Developer</span>
           <p class="about__text">
             As a problem solver by nature, I've loved programming ever since my first encounter with it in high school.
-            Over the years, the interest and passion only grew bigger and bigger. 
+            Over the years, the interest and passion only grew bigger. 
             Web development is challenging yet rewarding, and I love the innovation and creativity this field has to offer - its potential never ceases to amaze me!
             I’m passionate about purposeful design and making the world a better place through readable, clean and testable code.
             As well, I'm an avid believer in continuous growth - it's never too late to learn something new!
@@ -161,7 +161,7 @@
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="https://github.com/Ruby-Zhuang/DROP-THE-BEAT" class="project__link-name">
+            <a target="_blank" href="https://github.com/Ruby-Zhuang/DROP-THE-BEAT" class="project__link-name">
               <h2>Drop the Beat</h2>
               <p>'Name That Tune' Game</p>
             </a>
@@ -174,7 +174,7 @@
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="https://github.com/Ruby-Zhuang/Bubbles-Delight" class="project__link-name">
+            <a target="_blank" href="https://github.com/Ruby-Zhuang/Bubbles-Delight" class="project__link-name">
               <h2>Bubbles Delight</h2>
               <p>Bubbletea Ordering Experience</p>
             </a>
@@ -187,7 +187,7 @@
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="https://github.com/Ruby-Zhuang/scheduler" class="project__link-name">
+            <a target="_blank" href="https://github.com/Ruby-Zhuang/scheduler" class="project__link-name">
               <h2>Scheduler</h2>
               <p>Interview Manager</p>
             </a>
@@ -200,7 +200,7 @@
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="https://github.com/Ruby-Zhuang/tweeter" class="project__link-name">
+            <a target="_blank" href="https://github.com/Ruby-Zhuang/tweeter" class="project__link-name">
               <h2>Tweeter</h2>
               <p>Twitter Clone</p>
             </a>
@@ -213,7 +213,7 @@
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="https://github.com/Ruby-Zhuang/tinyapp" class="project__link-name">
+            <a target="_blank" href="https://github.com/Ruby-Zhuang/tinyapp" class="project__link-name">
               <h2>TinyApp</h2>
               <p>URL Shortener</p>
             </a>
@@ -226,7 +226,7 @@
 
           <!-- Reveal Link on Hover -->
           <div class="project__link">
-            <a href="https://github.com/Ruby-Zhuang/jungle-rails" class="project__link-name">
+            <a target="_blank" href="https://github.com/Ruby-Zhuang/jungle-rails" class="project__link-name">
               <h2>Jungle</h2>
               <p>E-Commerce Store</p>
             </a>
@@ -247,7 +247,7 @@
             I love sharing stories and hearing about new opportunities for growth.
           </div>
         </div>
-        
+
         <!-- Contact Info -->
         <div>
           <a class="contact__info" target="_blank" href="https://www.linkedin.com/in/rubyzhuang/" >
