--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div>
           <h2 class="contact__action">Say Hello! 👋</h2>
           <div class="contact__action-text">
-            If you would like to chat and/or know more about my journey, please feel free to reach out! 
+            Thanks for stopping by! If you would like to chat and/or know more about my journey, please feel free to reach out. 
             I love sharing stories and hearing about new opportunities for growth.
           </div>
         </div>
