Fix link to email

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </div>
           </a>
 
-          <a class="contact__info" target="_blank" href="https://github.com/Ruby-Zhuang" >
+          <a class="contact__info" target="_blank" href="mailto:ruby.zhuang@hotmail.com" >
             <div class="contact__social">
               <i class="fas fa-envelope "></i>
             </div>
