--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
           <span class="skills__name">React</span>
           <span class="skills__name">jQuery</span>
           <span class="skills__name">EJS</span>
+          <span class="skills__name">ERB</span>
           <span class="skills__name">Rails</span>
           <span class="skills__name">Bootstrap</span>
           <span class="skills__name">Material UI</span>
