--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
 
           <!-- Frameworks & Libraries -->
           <h3 class="skills_subtitle">Frameworks & Libraries</h3>
+          <span class="skills__name">Axios</span>
           <span class="skills__name">Bootstrap</span>
           <span class="skills__name">EJS</span>
           <span class="skills__name">ERB</span>
           <span class="skills__name">Express</span>
           <span class="skills__name">jQuery</span>
+          <span class="skills__name">Knex</span> 
           <span class="skills__name">Material UI</span>
           <span class="skills__name">Node.js</span>
           <span class="skills__name">Rails</span>
@@ -138,10 +140,12 @@
 
           <!-- Testing -->
           <h3 class="skills_subtitle">Testing</h3>
+          <span class="skills__name">Capybara</span>
           <span class="skills__name">Chai</span>
           <span class="skills__name">Cypress</span>
           <span class="skills__name">Jest</span>
           <span class="skills__name">Mocha</span>
+          <span class="skills__name">Rspec</span>
           <span class="skills__name">Storybook</span>
         </div>
 
